--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hapi-auth-cookie",
-  "description": "Cookie authentication plugin",
+  "name": "hapi-shared-auth-cookie",
+  "description": "Shared Session Cookie authentication plugin",
   "version": "5.0.0",
-  "repository": "git://github.com/hapijs/hapi-auth-cookie",
+  "repository": "git://github.com/mugli/hapi-shared-auth-cookie",
   "main": "lib/index.js",
   "keywords": [
     "hapi",
